--- a/pom.xml
+++ b/pom.xml
@@ -273,7 +273,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>latest.integration</version>
+            <version>2.5.1</version>
         </dependency>
 
         <!-- jxls dependency -->
@@ -287,6 +287,29 @@
             <groupId>net.sf.jxls</groupId>
             <artifactId>jxls-reader</artifactId>
             <version>1.0.2</version>
+        </dependency>
+
+        <!-- dependency with test scope -->
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.0.2.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
